# claude-session-switch

./: $  .gitignore  00_READ_ME_FIRST.txt  00_START_HERE.md  APP_LAUNCH_STATUS.md  BUILD_ENVIRONMENT_TROUBLESHOOTING.md  BUILD_SUCCESS.md  CLAUDE.md  COMMANDS_DRAFT.md  COMPILATION_COMPLETE.txt  COMPILATION_VERIFICATION.md  COMPLETION_REPORT.md  EXECUTIVE_SUMMARY.md  FINAL_DELIVERY.md  FINAL_REPORT.txt  FINAL_STATUS.txt  FINAL_STATUS_REPORT.md  FRONTEND_INTEGRATION_GUIDE.md  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_SUMMARY_TASK_3.md  INDEX.md  INITIALIZATION_REPORT.md  LICENSE  PROJECT_COMPLETION_SUMMARY.md  PROJECT_STATUS.json  PROJECT_STRUCTURE.md  PROJECT_SUMMARY.md  QUICKSTART.md  QUICK_START.md  QUICK_START.txt  README.en.md  README.md  RUN_ME.sh  START_HERE.md  SWIFTTERM_IMPLEMENTATION_PROGRESS.md  TASK_4_COMPLETION_REPORT.md  TAURI_COMMANDS_IMPLEMENTATION.md  VERIFICATION_CHECKLIST.md  generate-icons.html  (+6 more)
.github/workflows/: build.yml  release.yml
docs/plans/: 2026-03-09-self-update-design.md  2026-03-09-self-update.md  2026-03-12-theme-presets-design.md  2026-03-12-theme-presets.md  2026-03-12-update-dialog-design.md  2026-03-12-update-dialog.md
docs/screenshots/: README.md
scripts/: capture-app-window.sh  find-bundle-env.sh  generate-release-notes.sh  package-dmg.sh  test-find-bundle-env.sh  test-generate-release-notes.sh
src/: App.tsx  index.css  main.tsx  styles.css  vite-env.d.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src-tauri/src/commands/: claude_session.rs  mod.rs  project.rs  pty.rs  session.rs  settings.rs  system.rs  terminal.rs  update.rs
src-tauri/src/models/: app_settings.rs  claude_session.rs  mod.rs  project.rs  session.rs  shell.rs  terminal.rs
src-tauri/src/services/: claude_session_service.rs  mod.rs  project_service.rs  pty_service.rs  session_service.rs  settings_service.rs  storage_service.rs  update_service.rs
src-tauri/src/utils/: mod.rs  terminal.rs
src-tauri/tests/: integration_test.rs
src/components/: EmbeddedTerminal.css  EmbeddedTerminal.tsx  ErrorAlert.css  ErrorAlert.tsx  ExampleWithApiState.tsx  LoadingSpinner.css  LoadingSpinner.tsx  ProjectEditorSheet.css  ProjectEditorSheet.tsx  ProjectList.css  ProjectList.tsx  SessionDetailView.css  SessionDetailView.tsx  SessionEditorSheet.css  SessionEditorSheet.tsx  SessionList.css  SessionList.tsx  UpdateDialog.css  UpdateDialog.tsx
src/context/: ApiStateContext.tsx  README.md
src/hooks/: index.ts  useAsyncCommand.ts  useBackend.ts  useWindowManager.ts
src/lib/: claudeSessions.test.ts  claudeSessions.ts  claudeTerminalAutomation.test.ts  claudeTerminalAutomation.ts  i18n.test.ts  i18n.ts  ptyEventBus.ts  themePresets.test.ts  themePresets.ts  updateFlow.test.ts  updateFlow.ts  updateReleaseNotes.test.ts  updateReleaseNotes.ts
src/pages/: ProjectDashboard.css  (+1 more)
(+1 files in other folders)
