[package]
name = "cc-session-switch"
version = "0.1.0"
description = "CC Session Switch - Claude Code session manager"
authors = ["Claude Code Team"]
license = "MIT"
repository = ""
default-run = "cc-session-switch"
edition = "2021"
rust-version = "1.70"

[build-dependencies]
tauri-build = { version = "2.5", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.3", features = [] }
tauri-plugin-dialog = "2.3"
tauri-plugin-shell = "2.3"
tokio = { version = "1.35", features = ["full"] }
uuid = { version = "1.9", features = ["v4", "serde"] }
chrono = { version = "0.4.31", features = ["serde"] }
dirs = "5.0"
thiserror = "1.0"
log = "0.4"
anyhow = "1.0"
portable-pty = "0.8"

[features]
default = []
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
codegen-units = 1
lto = true
