[package]
name = "claude-session-switch"
version = "0.1.1"
description = "Desktop Claude Code session switcher with embedded terminal and resume support"
authors = ["Claude Code Team"]
license = "MIT"
repository = "https://github.com/MannixHu/claude-session-switch"
default-run = "claude-session-switch"
edition = "2021"
rust-version = "1.70"

[build-dependencies]
tauri-build = { version = "2.5", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.3", features = [] }
tauri-plugin-dialog = "2.3"
tauri-plugin-shell = "2.3"
tauri-plugin-notification = "2.3"
tokio = { version = "1.35", features = ["full"] }
uuid = { version = "1.9", features = ["v4", "serde"] }
chrono = { version = "0.4.31", features = ["serde"] }
dirs = "5.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.11"
anyhow = "1.0"
portable-pty = "0.8"

[features]
default = []
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
codegen-units = 1
lto = true
